@@ -8,3 +8,4 @@
 * Disable Run As/Debug As Java in Scala sources :ticket:`1001178`
 * Correct partitioning of octal sequences in character literals - :ticket:`1001443`
 * Add syntax highlighting for escape sequences in character literals  - :ticket:`1001444`
+* Prevent auto-insertion of closing brace when editing an existing line - :ticket:`1001309`
